--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -10,13 +10,16 @@
 {% endif %}
 
 <form action="{% url 'music:favorite' album.id %}" method="post">
-    {% csrf_token %} {% for song in album.song_set.all %}
-    <input type="radio" id="song{{forloop.counter}}" value="{{song.id}}">
+    {% csrf_token %} 
+    {% for song in album.song_set.all %}
+    <input name="song" type="radio" id="song{{forloop.counter}}" value="{{song.id}}">
     <label for="song{{forloop.counter}}">
             {{ song.song_title}}
      </label>
-     {% if song.is_favorite %}
-        <img  width="64" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/firey-orange-jelly-icons-natural-wonders/050935-firey-orange-jelly-icon-natural-wonders-star16-solid.png" >
-     {% endif %}
-         {% endfor %}
+        {% if song.is_favorite %}
+            <img  width="16" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/firey-orange-jelly-icons-natural-wonders/050935-firey-orange-jelly-icon-natural-wonders-star16-solid.png" >
+        {% endif %}
+    <br/>
+    {% endfor %}
+    <input type="submit" value="Favorite">
 </form>
