--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -1,3 +1,6 @@
+{% load staticfiles %}
+<link rel="stylesheet" href="{% static 'music/css/styles.css' %}" type="text/css">
+
 <img src="{{ album.album_logo }}" width="512">
 
 <h1>{{ album.album_title }}</h1>
