--- a/music/static/music/css/styles.css
+++ b/music/static/music/css/styles.css
@@ -1,3 +1,9 @@
 body {
     background-color:gainsboro
 }
+.navbar {
+    border-radius: 0;
+}
+.navbar-brand {
+    font-family: 'Satisfy', cursive;
+}
