--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -1,64 +1,7 @@
- {%load staticfiles %}
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-    crossorigin="anonymous"></script>
-<link rel="stylesheet" href="{% static 'music/css/styles.css'%}">
+{% extends 'music/base.html'%}
 
-<nav class="nav-bar navbar-inverse">
-    <div class="container-fluid">
-        <!--logo-->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>      
-        </button>
-            <a href="{% url 'music:index' %}" class="navbar-brand">Viberr</a>
-        </div>
-
-        <!-- Items-->
-        <div class="collapse navbar-collapse" id="topNavBar">
-            <ul class="nav navbar-nav">
-                <li class="active">
-                    <a href="{% url 'music:index'%}">
-                        <span class="glyphicon glyphicon-cd" aria-hidden="true"></span> &nbsp;
-                            Albums
-                    </a>
-                </li>
-                <li class="">
-                    <a href="#">
-                        <span class="glyphicon glyphicon-music" aria-hidden="true"></span> &nbsp;
-                        Songs
-                    </a>
-                </li>
-            </ul>
-            <form action="#" role="search" method="get" class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" class="form-control" name="q" value="">
-                </div>
-                <button type="submit" class="btn btn-default">Search</button>
-            </form>
-
-            <ul class="nav navbar-nav navbar-right">
-                <li class="active">
-                    <a href="{% url 'music:index'%}">
-                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> &nbsp;
-                            Add Album
-                    </a>
-                </li>
-                <li class="">
-                    <a href="#">
-                        <span class="glyphicon glyphicon-off" aria-hidden="true"></span> &nbsp;
-                        Logout
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+{% block title %}All Albums{% endblock %}
+{% block body %}
 {% if all_albums %}
 <ul>
     {% for album in all_albums%}
@@ -68,3 +11,5 @@
 {% else %}
 <h3>You don't have any album</h3>
 {%endif%}
+
+{% endblock %}
