--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -19,7 +19,7 @@
   {% endif %}
     <p>
         <a href="{% url 'music:detail' album.id %}" class="btn btn-primary">View All</a>
-        <a href="#" class="">Add new Song</a>
+        <a href="{% url 'music:song-add' album.id%}" class="">Add new Song</a>
     </p>
     <div class="wrapper">
       <!-- Table -->
@@ -33,7 +33,7 @@
             </tr>
     {% for song in album.song_set.all %}
             <tr>
-                <td>{{ song.pk }}</td>
+                 <td><input type="hidden" name="song_id" value="{{ song.pk }}"> {{forloop.counter}}</td>
                 <td>{{ song.song_title }}</td>
                 <td>{{ song.file_type }}</td>
                 <td>  
@@ -43,7 +43,11 @@
                 </td>
                 <td>
                     <p>
-                        <a href="" class="btn btn-default btn-action"><span class="glyphicon glyphicon-trash"></span></a>
+                       <form action="{% url 'music:song-delete' song.pk %}" method="post" style="display:inline">
+                       {% csrf_token %} 
+                       <input type="hidden" name="next" value="{{ request.path }}">
+                        <button class="btn btn-default btn-action" type="submit"><span class="glyphicon glyphicon-trash"></span></button>
+                      </form>
                         <a href="" class="btn btn-default btn-action"><span class="glyphicon glyphicon-pencil"></span></a>
                         <a href="" class="btn btn-default btn-action"><span class="glyphicon glyphicon-star"></span></a>
                     </p>
